testsuite/tests/overloadedrecflds/should_fail/NFSExport.stderr

NFSExport.hs:2:27: error:
    Not in scope: ‘foo’
    Suggested fix:
      Notice that ‘foo’ is a field selector belonging to the type ‘T’
      that has been suppressed by NoFieldSelectors.
